--- a/project1/templates/home/index.html
+++ b/project1/templates/home/index.html
@@ -31,26 +31,28 @@
         {% if search_query %}
             <div class="text-center mb-4">
                 {% if books|length > 0 %}
-                        <small class="font-weight-bold text-info">Found {{ books|length }} books with keyword '{{search_query}}'...</small>
+                    <small class="font-weight-bold text-info">Found {{ books|length }} books with keyword '{{search_query}}'...</small>
                 {% else %}
-                        <small class="font-weight-bold text-muted">Did not find any book with '{{search_query}}'.</small>
+                    <div class="alert d-inline-box alert-warning">Did not find any book with '{{search_query}}'.</div>
                 {% endif %}
             </div>
         {% endif %}
 
         <div class="row justify-content-center mb-5">
-            {% for book in books %}
-                <a href="{{ url_for('book.index', book_id=book.id) }}" class="col-lg-2 col-md-3 col-sm-4 col-10 card p-0 m-2 b-card-link">
-                    <div>
-                        <blockquote class="blockquote mb-0 card-body">
-                            <p class="font-weight-bold">{{ book.title }}</p>
-                            <small class="text-muted">
-                                {{ book.author }}
-                            </small>
-                        </blockquote>
-                    </div>
-                </a>
-            {% endfor %}
+            {% if books|length > 0 %}
+                {% for book in books %}
+                    <a href="{{ url_for('book.index', book_id=book.id) }}" class="col-lg-2 col-md-3 col-sm-4 col-10 card p-0 m-2 b-card-link">
+                        <div>
+                            <blockquote class="blockquote mb-0 card-body">
+                                <p class="font-weight-bold">{{ book.title }}</p>
+                                <small class="text-muted">
+                                    {{ book.author }}
+                                </small>
+                            </blockquote>
+                        </div>
+                    </a>
+                {% endfor %}
+            {% endif %}
         </div>
         
         
