--- a/2020/project1/encyclopedia/templates/encyclopedia/layout.html
+++ b/2020/project1/encyclopedia/templates/encyclopedia/layout.html
@@ -6,7 +6,7 @@
         <title>{% block title %}{% endblock %}</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
         <script src="https://kit.fontawesome.com/9e6a52621a.js" crossorigin="anonymous"></script>
         <link href="{% static 'encyclopedia/styles.css' %}" rel="stylesheet">
     </head>
