--- a/2020/project1/encyclopedia/templates/encyclopedia/submit.html
+++ b/2020/project1/encyclopedia/templates/encyclopedia/submit.html
@@ -23,6 +23,11 @@
             </div>
         {% endif %}
         
+        {% if is_editing %}
+            <h2>Editing</h2>
+        {% else %}    
+            <h2>New Wiki</h2>
+        {% endif %}
 
         <div class="form-group">
             <label for="title" class="font-weight-bold">Title</label>
@@ -36,7 +41,7 @@
             {% endif %}
         </div>
 
-        <div class="form-group">
+        <div class="form-group mt-2">
             <label for="body" class="font-weight-bold">Body</label>
             {{ form.body }}
             {% if form.body.errors %}
@@ -46,14 +51,18 @@
                     {% endfor %}
                 </div>
             {% endif %}
-            <small class="text-muted"><span class="font-weight-bold" style="color: lightgrey;">[info]</span> Type your page content in <a href="https://commonmark.org/help/" target="_blank">Markdown<i class="ml-1 font-decoration-none fa fa-external-link-square-alt"></i></a> format.</small>
+            <small class="text-muted"><span class="font-weight-bold" style="color: lightgrey;">[info]</span> Type your page content in <a href="https://commonmark.org/help/" target="_blank">Markdown <i class="font-decoration-none fa-sm fa fa-link"></i></a> format.</small>
         </div>
 
         <hr>
 
         <div class="mt-4 mb-4 text-right">
-            <input type="submit" name="btn_draft" class="btn btn-outline-info" value="SAVE DRAFT">
-            <input type="submit" name="btn_submit" class="btn btn-primary ml-2" value="SUBMIT">
+            {% if is_editing %}
+            <input type="submit" name="btn_saveedit" class="btn btn-warning ml-2" value="SAVE EDIT">
+            {% else %}
+                <input type="submit" name="btn_draft" class="btn btn-outline-info" value="SAVE DRAFT">
+                <input type="submit" name="btn_submit" class="btn btn-primary ml-2" value="SUBMIT">
+            {% endif %}
         </div>
     </form>
 {% endblock %}
