added timestamp on email view as per project requirement

--- a/2020/project3/mail/templates/mail/inbox.html
+++ b/2020/project3/mail/templates/mail/inbox.html
@@ -21,7 +21,8 @@
             </div>
             <div class="col">
                 <p id="show-from" class="mb-0">kishan_jadav@hotmail.com</p>
-                <small id="show-recipients" class="text-muted"></small>
+                <small id="show-recipients" class="text-muted"></small><br>
+                <small id="show-timestamp" class="text-muted"></small>
             </div>
             <div class="col col-auto">
                 <button id="show-archive-btn" type="button" class="btn btn-light rounded-pill mr-2">
