added tiny spacing in the header with buttons so it looks neat

--- a/2020/project3/mail/templates/mail/inbox.html
+++ b/2020/project3/mail/templates/mail/inbox.html
@@ -24,7 +24,7 @@
                 <small id="show-recipients" class="text-muted"></small><br>
                 <small id="show-timestamp" class="text-muted"></small>
             </div>
-            <div class="col col-auto">
+            <div class="col col-auto mt-2">
                 <button id="show-archive-btn" type="button" class="btn btn-light rounded-pill mr-2">
                     Archive
                 </button>
